<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_visited_key"
        android:title="@string/pref_visited_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_visited_title"
        android:entries="@array/pref_visited_entries"
        android:entryValues="@array/pref_visited_entries"
        android:defaultValue="@string/pref_visited_default" />

    <ListPreference
        android:key="@string/pref_wish_list_key"
        android:title="@string/pref_wish_list_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_wish_list_title"
        android:entries="@array/pref_wish_list_entries"
        android:entryValues="@array/pref_wish_list_entries"
        android:defaultValue="@string/pref_wish_list_default" />
</PreferenceScreen>